--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,15 +1,15 @@
 <div class="contextual-toolbar js-contextualToolbar _hidden">
   <div class="js-typeList list">
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="titulo"><span class="shortcut">T</span>ítulo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="capitulo"><span class="shortcut">C</span>apítulo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="secao"><span class="shortcut">S</span>eção</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="subsecao">S<span class="shortcut">u</span>bseção</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="continuacao">C<span class="shortcut">o</span>ntinuação</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="artigo"><span class="shortcut">A</span>rtigo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="paragrafo"><span class="shortcut">P</span>arágrafo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="inciso"><span class="shortcut">I</span>nciso</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea">A<span class="shortcut">l</span>ínea</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item">It<span class="shortcut">e</span>m</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="titulo" aria-label="Trocar para Título" aria-keyshortcuts="T"><span class="shortcut">T</span>ítulo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="capitulo" aria-label="Trocar para Capítulo" aria-keyshortcuts="C"><span class="shortcut">C</span>apítulo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="secao" aria-label="Trocar para Seção" aria-keyshortcuts="S"><span class="shortcut">S</span>eção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="subsecao" aria-label="Trocar para Subseção" aria-keyshortcuts="U">S<span class="shortcut">u</span>bseção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="continuacao" aria-label="Trocar para Continuação" aria-keyshortcuts="O">C<span class="shortcut">o</span>ntinuação</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="artigo" aria-label="Trocar para Artigo" aria-keyshortcuts="A"><span class="shortcut">A</span>rtigo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="paragrafo" aria-label="Trocar para Parágrafo" aria-keyshortcuts="P"><span class="shortcut">P</span>arágrafo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="inciso" aria-label="Trocar para Inciso" aria-keyshortcuts="I"><span class="shortcut">I</span>nciso</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea" aria-label="Trocar para Alínea" aria-keyshortcuts="L">A<span class="shortcut">l</span>ínea</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item" aria-label="Trocar para Item" aria-keyshortcuts="E">It<span class="shortcut">e</span>m</button>
   </div>
   <span class="arrow js-contextualToolbarArrow"></span>
 </div>
