--- a/src/static/scss/components/_version-timeline.scss
+++ b/src/static/scss/components/_version-timeline.scss
@@ -191,7 +191,7 @@
     color: $color-gray;
   }
 
-  & > .item > .named > .date {
+  & > .item > .named > .datetime {
     display: flex;
     align-items: center;
   }
