Fix remove participation public tag

--- a/src/templates/components/versions-list.html
+++ b/src/templates/components/versions-list.html
@@ -28,7 +28,7 @@
           {% if group.public_participation %}
           Participação Pública
           {% else %}
-          {{group.thematic_group.name}} Participação Pública
+          {{group.thematic_group.name}}
           {% endif %}
           {% if not forloop.last %}-{% endif %}
         {% endfor %}
