--- a/src/templates/components/save-modal.html
+++ b/src/templates/components/save-modal.html
@@ -18,6 +18,6 @@
     <input class="js-name" type="text" name="name" required id="name">
     <label for="name">Nome</label>
   </div>
-  <button class="app-button -green js-send">Salvar</button>
+  <button class="app-button -green js-send"><span class="load _hidden js-load"></span><span class="js-text">Salvar</span></button>
 </form>
 {% endblock content %}
