--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -16,7 +16,7 @@
 
 <main class="projects-list" id="js-projects-list">
   <div class="header">
-    <h1>Projetos</h1>
+    <h1>Propostas legislativas</h1>
     <div class="tabs">
       <div class="tab -active">Participação Popular</div>
       <div class="tab">Abertos</div>
