--- a/src/templates/emails/remove_participant.html
+++ b/src/templates/emails/remove_participant.html
@@ -290,7 +290,7 @@
                             <td style="overflow-wrap:break-word;word-break:break-word;padding:12px;font-family:arial,helvetica,sans-serif;" align="left">
 
                               <div style="color: #000; line-height: 150%; text-align: center; word-wrap: break-word;">
-                                <p style="margin-top: 13px; margin-bottom: 13px; text-align: center; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">Voc&ecirc; foi removido do projeto {{ document.title }} pelo usu&aacute;rio {{ document.owner }}</span></span>
+                                <p style="margin-top: 13px; margin-bottom: 13px; text-align: center; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">Voc&ecirc; foi removido da proposta legislativa {{ document.title }} pelo usu&aacute;rio {{ document.owner }}</span></span>
                                 </p>
                               </div>
 
@@ -307,7 +307,7 @@
                               <div align="center">
                                 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:arial,helvetica,sans-serif;"><tr><td style="font-family:arial,helvetica,sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://{{ site_url }}{% url 'home' %}" style="height:44px; v-text-anchor:middle; width:198px;" arcsize="0%" stroke="f" fillcolor="#2da965"><w:anchorlock/><center style="color:#FFFFFF;font-family:arial,helvetica,sans-serif;"><![endif]-->
                                 <a href="http://{{ site_url }}{% url 'home' %}" target="_self" style="display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2da965; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px; width: auto; padding: 14px 34px; mso-border-alt: none;">
-                                  <span style="line-height:120%;">OUTROS PROJETO</span>
+                                  <span style="line-height:120%;">OUTRAS PROPOSTAS LEGISLATIVAS</span>
                                 </a>
                                 <!--[if mso]></center></v:roundrect></td></tr></table><![endif]-->
                               </div>
