Fix text and its width

--- a/src/templates/components/app-onboarding.html
+++ b/src/templates/components/app-onboarding.html
@@ -11,7 +11,7 @@
     {% if current_path|startswith:"/p/" and current_path != "/p/new/" %}
       <p><span class="text-highlight">Selecione o texto</span> da proposta legislativa para dar sua opinião. <br> Você pode fazer isso um artigo por vez!</p>
     {% else %}
-      <p>Acesse uma proposta legislativa e <span class="text-highlight">selecione o texto</span> dentro dele para dar sua opinião. <br> Você pode fazer isso um artigo por vez!</p>
+      <p>Acesse uma proposta legislativa e <span class="text-highlight">selecione o texto</span> dentro dela para dar sua opinião. <br> Você pode fazer isso um artigo por vez!</p>
     {% endif %}
     <button class="app-button -green js-next">Próximo</button>
   </div>
