--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -202,7 +202,7 @@
 
     {% endif %}
   </div>
-  <p class="no-result" style="display: none">Oi</p>
+  <p class="no-result" style="display: none">Não encontramos nenhum resultado</p>
 </main>
 
 {% include "components/app-onboarding.html" %}
