--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -200,8 +200,9 @@
       </a>
     {% endfor %}
 
+    {% endif %}
   </div>
-  {% endif %}
+  <p class="no-result" style="display: none">Não encontramos nenhum resultado</p>
 </main>
 
 {% include "components/app-onboarding.html" %}
