--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -3,6 +3,7 @@ $color-link: #36C;
 $color-whitesmoke: #F4F4F4;
 $color-brand: #2DA965;
 $color-deep-gray: #474747;
+$color-light-black: #383838;
 $color-grayish: #D0D0D0;
 $color-gray: #949494;
 $color-orange: #F70;
