change emails text

--- a/src/templates/emails/congressman_authorization.html
+++ b/src/templates/emails/congressman_authorization.html
@@ -293,9 +293,9 @@
                               <div style="color: #000; line-height: 150%; text-align: center; word-wrap: break-word;">
                                 <p style="margin-top: 13px; margin-bottom: 13px; text-align: center; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;">
                                   {% if updated %}
-                                  <span style="font-size: 16px; line-height: 24px;">O consultor {{ document_owner }} deseja alterar a data de encerramento do documento {{ document_title }} para {{ closing_date }}.</span>
+                                  <span style="font-size: 16px; line-height: 24px;">O(A) servidor(a) {{ document_owner }} deseja alterar a data de encerramento do documento {{ document_title }} para {{ closing_date }}.</span>
                                   {% else %}
-                                  <span style="font-size: 16px; line-height: 24px;">O consultor {{ document_owner }} deseja abrir o documento {{ document_title }} para consulta pública até {{ closing_date }}.</span>
+                                  <span style="font-size: 16px; line-height: 24px;">O(A) servidor(a) {{ document_owner }} deseja abrir o documento {{ document_title }} para consulta pública até {{ closing_date }}.</span>
                                   {% endif %}
                                   </span>
                                 </p>
