--- a/src/templates/emails/participation_request.html
+++ b/src/templates/emails/participation_request.html
@@ -291,10 +291,10 @@
 
                               <div style="color: #000; line-height: 150%; text-align: center; word-wrap: break-word;">
                                 {% if updated %}
-                                <p style="margin-top: 13px; margin-bottom: 13px; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">O consultor(a) {{owner}}, solicita o adiamento da consulta pública do dodocumento "{{document_title}}" ao(&agrave;) dep. {{congressman}} com data de encerramento para {{closing_date}}.</span></span>
+                                <p style="margin-top: 13px; margin-bottom: 13px; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">O(A) servidor(a) {{owner}}, solicita o adiamento da consulta pública do dodocumento "{{document_title}}" ao(&agrave;) dep. {{congressman}} com data de encerramento para {{closing_date}}.</span></span>
                                 </p>
                                 {% else %}
-                                <p style="margin-top: 13px; margin-bottom: 13px; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">O consultor(a) {{owner}}, solicita a participação pública do dodocumento "{{document_title}}" ao(&agrave;) dep. {{congressman}} com data de encerramento para {{closing_date}}.</span></span>
+                                <p style="margin-top: 13px; margin-bottom: 13px; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;">O(A) servidor(a) {{owner}}, solicita a participação pública do dodocumento "{{document_title}}" ao(&agrave;) dep. {{congressman}} com data de encerramento para {{closing_date}}.</span></span>
                                 </p>
                                 {% endif %}
                                 <p style="margin-top: 13px; margin-bottom: 13px; line-height: 150%; font-size: 14px;"><span style="color: #474747; font-family: Roboto, Tahoma, sans-serif; font-size: 14px; line-height: 21px;"><span style="font-size: 16px; line-height: 24px;"><strong>Email:</strong> {{email}}</span></span>
