--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -18,7 +18,7 @@
   <header>
     <div class="info">
       {% now "Y-m-d" as todays_date %}
-      {% if group.closing_date|date:"Y-m-d" > todays_date %}
+      {% if group.closing_date|date:"Y-m-d" >= todays_date %}
       <span class="date -active">Aberto até {{group.closing_date|date:'d/m/Y'}}</span>
       {% else %}
       <span class="date -inactive">Encerrado em {{group.closing_date|date:'d/m/Y'}}</span>
