fix text and color in dropdown menu if document is closed

--- a/src/static/scss/components/_dropdown-menu.scss
+++ b/src/static/scss/components/_dropdown-menu.scss
@@ -397,6 +397,10 @@
     color: $color-brand;
   }
 
+  & > .list a > .info > .item.-red {
+    color: $color-red;
+  }
+
   & > .list > hr {
     margin: .5rem 0;
 
