create events and html to show feedbak modal

--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -175,6 +175,8 @@
 {% include "components/validate-modal.html" %}
 {% include "components/public-participation-modal.html" %}
 {% include "components/participation-info-modal.html" %}
+{% include "components/feedback-modal.html" %}
+{% include "components/feedback-info-modal.html" %}
 {% include "components/save-modal.html" %}
 
 {% endblock content %}
@@ -216,6 +218,8 @@
 <script src="{% static 'js/components/opinionsMetrics/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
 <script src="{% static 'js/components/documentOpinionsBody/view.js' %}"></script>
+<script src="{% static 'js/components/feedbackModal/view.js' %}"></script>
+<script src="{% static 'js/components/feedbackModal/controller.js' %}"></script>
 <script src="{% static 'js/pages/opinionsDocument.js' %}"></script>
 {% endif %}
 {% endblock page_js %}
