--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -7,15 +7,21 @@
     <a href="#" class="icon js-collapseExpand -collapse -collapsed" aria-label="Expandir">
       {% include "svgs/expand-icon.html" %}
     </a>
-    {% if group.public_participation %}
-    <a href="#" class="icon js-openPublicParticipation" aria-label="Editar participação pública">
-      {% include "svgs/public-icon.html" %}
-    </a>
-    {% else %}
-    <a href="{% url 'edit_group' group.pk %}?previous_page={{ request.get_full_path }}" class="icon" aria-label="Editar participação restrita">
-      {% include "svgs/closed-icon.html" %}
-    </a>
-    {% endif %}
+      {% now "Y-m-d" as todays_date %}
+      {% if group.closing_date|date:"Y-m-d" < todays_date %}
+      <a href="#" class="icon js-openFeedback" aria-label="Feedback">
+        {% include "svgs/arrows-icon.html" %}
+      </a>
+      {% endif %}
+      {% if group.public_participation %}
+      <a href="#" class="icon js-openPublicParticipation" aria-label="Editar participação pública">
+        {% include "svgs/public-icon.html" %}
+      </a>
+      {% else %}
+      <a href="{% url 'edit_group' group.pk %}?previous_page={{ request.get_full_path }}" class="icon" aria-label="Editar participação restrita">
+        {% include "svgs/closed-icon.html" %}
+      </a>
+      {% endif %}
     {% elif 'editor' in request.path %}
     <a href="#" class="icon js-saveButton" aria-label="Criar versão">
       {% include "svgs/cloud-icon.html" %}
