--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -149,7 +149,7 @@
             <span class="begin">Aberto{% if private_group.openning_date|absolute_days_since == "0" %} hoje{% elif private_group.openning_date|absolute_days_since == "1" %} ontem{% else %} há <span>{{ private_group.openning_date|absolute_days_since }} dias{% endif %}</span>
             </span>
 
-            <span class="end">Encerra-se{% if private_group.closing|absolute_days_since == "0" %} hoje{% elif private_group.closing|absolute_days_since == "1" %} amanhã{% else %} em <span>{{ private_group.closing_date|absolute_days_since }} dias{% endif %}</span>
+            <span class="end">Encerra-se{% if private_group.closing_date|absolute_days_since == "0" %} hoje{% elif private_group.closing_date|absolute_days_since == "1" %} amanhã{% else %} em <span>{{ private_group.closing_date|absolute_days_since }} dias{% endif %}</span>
             </span>
 
             <div class="progress-bar">
@@ -237,12 +237,11 @@
         <div class="footer">
             <div class="status">
               <p class="closed">Encerrado em {{closed_group.closing_date|date:"d/m/Y"}}</p>
-              <!-- Uncomment whenever document feedback status is implemented
               <div class="feedback-status">
                 <img src="{% static 'img/hourglass.svg' %}" alt="">
-                <p class="-onhold">Aguardando feedback do deputado</p>
+                <p class="-onhold"><span>Aguardando resposta</span>do deputado há
+                  {{ closed_group.closing_date |absolute_days_since }} dias</p>
               </div>
-               -->
             </div>
 
           <span class="pseudolink">Acessar</span>
