add info modal before feedback

--- a/src/templates/components/feedback-info-modal.html
+++ b/src/templates/components/feedback-info-modal.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Quase lá 😉</h1>
-<p>Enviamos uma solicitação para o deputado confirmar o encerramento proposta legislativa.</p>
-<button class="app-button -green js-close">Fechar</button>
+<h1>Adicionar Versão e Vídeo Final</h1>
+<p>Texto Explicativo.</p>
+<button class="app-button -green js-openFeedback">Continuar</button>
 {% endblock content %}
